add permission to list clusters across namespaces

--- a/charts/mccp/templates/rbac/admin_role_bindings.yaml
+++ b/charts/mccp/templates/rbac/admin_role_bindings.yaml
@@ -93,6 +93,7 @@ roleRef:
   name: gitops-canaries-reader
   apiGroup: rbac.authorization.k8s.io
 ---
+{{- if .Values.config.capi.clusters.namespace }}
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
@@ -106,8 +107,23 @@ roleRef:
   kind: ClusterRole
   name: gitops-gitopsclusters-reader
   apiGroup: rbac.authorization.k8s.io
+{{- else }}
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRoleBinding
+metadata:
+  name: wego-admin-read-gitopsclusters
+subjects:
+- kind: User
+  name: "wego-admin"
+  apiGroup: rbac.authorization.k8s.io
+roleRef:
+  kind: ClusterRole
+  name: gitops-gitopsclusters-reader
+  apiGroup: rbac.authorization.k8s.io
+{{- end }}
 {{- end }}
 ---
+{{- if .Values.config.capi.clusters.namespace }}
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
@@ -121,3 +137,17 @@ subjects:
   - kind: User
     name: wego-admin
     apiGroup: rbac.authorization.k8s.io
+{{- else }}
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRoleBinding
+metadata:
+  name: wego-admin-gitops-capi-cluster-reader
+roleRef:
+  apiGroup: rbac.authorization.k8s.io
+  kind: ClusterRole
+  name: gitops-capicluster-reader
+subjects:
+  - kind: User
+    name: wego-admin
+    apiGroup: rbac.authorization.k8s.io
+{{- end }}
