--- a/charts/mccp/values.yaml
+++ b/charts/mccp/values.yaml
@@ -32,7 +32,7 @@ config:
       injectPruneAnnotation: enabled
       addBasesKustomization: enabled
     clusters:
-      namespace: default
+      namespace: ""
     repositoryURL: ""
     repositoryApiURL: ""
     repositoryPath: "./clusters/management/clusters"
