--- a/ui-cra/package.json
+++ b/ui-cra/package.json
@@ -95,10 +95,11 @@
     ]
   },
   "devDependencies": {
-    "@testing-library/react": "^12.1.5",
+    "@testing-library/react": "12.1.5",
     "@types/react-syntax-highlighter": "^13.5.2",
     "express": "^4.17.1",
     "http-proxy-middleware": "^2.0.0",
+    "jest-styled-components": "^7.0.8",
     "prettier": "^2.3.0"
   }
 }
