--- a/.github/workflows/acceptance-test.yaml
+++ b/.github/workflows/acceptance-test.yaml
@@ -115,7 +115,7 @@ on:
         required: false
       WGE_GITLAB_CLIENT_SECRET:
         description: "Gitlab oauth pplication secret"
-        required: false      
+        required: false
       GCP_PROJECT_ID:
         description: "Project id of the Google Cloud project"
         required: false
@@ -213,9 +213,9 @@ jobs:
         if: ${{ inputs.management-cluster-kind == 'eks' }}
         run: |
           if [ "$RUNNER_OS" == "Linux" ]; then
-            curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
-            unzip awscliv2.zip
-            sudo ./aws/install --update
+            curl -o aws-iam-authenticator https://amazon-eks.s3.us-west-2.amazonaws.com/1.21.2/2021-07-05/bin/linux/amd64/aws-iam-authenticator
+            chmod +x ./aws-iam-authenticator
+            sudo mv ./aws-iam-authenticator /usr/local/bin
           elif [ "$RUNNER_OS" == "macOS" ]; then
               curl "https://awscli.amazonaws.com/AWSCLIV2.pkg" -o "AWSCLIV2.pkg"
               sudo installer -pkg AWSCLIV2.pkg -target /
@@ -313,7 +313,7 @@ jobs:
           # Start selenium server in standalone mode
           xvfb-run -a --server-args="-screen 0 1280x1024x24" java -jar ./selenium-server-standalone-3.14.0.jar &
       - name: Setup management cluster
-        run: |          
+        run: |
           if [ ${{ inputs.management-cluster-kind }} = 'eks' ]; then
             export CLUSTER_NAME=wego-enterprise-nightly-cluster-${{ inputs.os-name }}
             export CLUSTER_VERSION=1.21
