--- a/charts/mccp/templates/rbac/admin_role_bindings.yaml
+++ b/charts/mccp/templates/rbac/admin_role_bindings.yaml
@@ -26,6 +26,7 @@ roleRef:
   name: gitops-templates-reader
   apiGroup: rbac.authorization.k8s.io
 ---
+{{- if .Values.config.capi.clusters.namespace }}
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
@@ -39,6 +40,20 @@ roleRef:
   kind: ClusterRole
   name: gitops-secrets-reader
   apiGroup: rbac.authorization.k8s.io
+{{- else }}
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRoleBinding
+metadata:
+  name: wego-admin-read-cluster-secrets
+subjects:
+- kind: User
+  name: "wego-admin"
+  apiGroup: rbac.authorization.k8s.io
+roleRef:
+  kind: ClusterRole
+  name: gitops-secrets-reader
+  apiGroup: rbac.authorization.k8s.io
+{{- end }}
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
