--- a/charts/mccp/values.yaml
+++ b/charts/mccp/values.yaml
@@ -82,3 +82,25 @@ service:
 
 cluster-controller:
   enabled: true
+
+ingress:
+  enabled: false
+  className: ""
+  # Service target information for ingress
+  # Required if no 'https' service port is defined
+  service:
+    name: ""
+    port: ""
+  annotations: {}
+  # kubernetes.io/ingress.class: nginx
+  # kubernetes.io/tls-acme: "true"
+  hosts:
+  # - host: chart-example.local
+  #   paths:
+  #     - path: /
+  #       pathType: ImplementationSpecific
+  #
+  tls: []
+  #  - secretName: chart-example-tls
+  #    hosts:
+  #      - chart-example.local
