--- a/charts/mccp/templates/clusters-service/ingress.yaml
+++ b/charts/mccp/templates/clusters-service/ingress.yaml
@@ -1,6 +1,6 @@
 {{- if .Values.ingress.enabled -}}
 {{- $svcName := (or .Values.ingress.service.name "clusters-service") -}}
-{{- $svcPort := (or .Values.ingress.service.port .Values.service.ports.https) -}}
+{{- $svcPort := (or .Values.ingress.service.port .Values.service.ports.https) | required ".Values.ingress.service.port or .Values.service.ports.https is required" -}}
 {{- if and .Values.ingress.className (not (semverCompare ">=1.18-0" .Capabilities.KubeVersion.GitVersion)) }}
   {{- if not (hasKey .Values.ingress.annotations "kubernetes.io/ingress.class") }}
   {{- $_ := set .Values.ingress.annotations "kubernetes.io/ingress.class" .Values.ingress.className}}
