--- a/cmd/clusters-service/pkg/templates/testdata/text-template2.yaml
+++ b/cmd/clusters-service/pkg/templates/testdata/text-template2.yaml
@@ -32,3 +32,5 @@ spec:
         kind: KubeadmControlPlane
         apiVersion: controlplane.cluster.x-k8s.io/v1alpha3
         name: "{{ .params.CLUSTER_NAME }}-control-plane"
+      notARealField:
+        name: "{{ .params.S3_BUCKET_NAME }}-test"
