--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -16,6 +16,8 @@ on:
       WGE_S3_AWS_SECRET_ACCESS_KEY: { required: true }
       WGE_HELM_REPO_USERNAME: { required: false }
       WGE_HELM_REPO_PASSWORD: { required: false }
+      WEAVE_GITOPS_CLUSTERS_GITHUB_WORKLOAD_IDENTITY_PROVIDER: { required: false }
+      WEAVE_GITOPS_CLUSTERS_GITHUB_SERVICE_ACCOUNT: { required: false }
 
 env:
   GITHUB_BUILD_USERNAME: wge-build-bot
@@ -25,9 +27,13 @@ env:
   NODE_VERSION: "14"
   HELM_REPO: ${{ inputs.helmrepo }}
   REACT_APP_DISABLE_PROGRESSIVE_DELIVERY: "true"
+  HAS_GCP_CREDS: ${{ secrets.WEAVE_GITOPS_CLUSTERS_GITHUB_WORKLOAD_IDENTITY_PROVIDER != '' && secrets.WEAVE_GITOPS_CLUSTERS_GITHUB_SERVICE_ACCOUNT != '' }}
 
 jobs:
   helm-chart:
+    permissions:
+      id-token: write
+      contents: read
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
@@ -40,7 +46,7 @@ jobs:
       - name: Install Helm v3
         uses: azure/setup-helm@v1
         with:
-          version: v3.5.4
+          version: v3.9.0
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
@@ -78,6 +84,26 @@ jobs:
             # Use the same image tag from the previous step but set the semver version
             helm cm-push ./charts/mccp weave-gitops-enterprise-main --version=$SEMVER_TAG --force
           fi
+      - name: Authenticate with Google Artifact Repository
+        id: google_auth
+        if: github.ref_name == 'main' && env.HAS_GCP_CREDS == 'true'
+        uses: google-github-actions/auth@v0
+        with:
+          workload_identity_provider: ${{ secrets.WEAVE_GITOPS_CLUSTERS_GITHUB_WORKLOAD_IDENTITY_PROVIDER }}
+          service_account: ${{ secrets.WEAVE_GITOPS_CLUSTERS_GITHUB_SERVICE_ACCOUNT }}
+          token_format: access_token
+          access_token_lifetime: 300s
+      - name: Publish Helm chart to Google Artifact Repository
+        if: github.ref_name == 'main' && env.HAS_GCP_CREDS == 'true'
+        run: |
+          TAG=$(git describe --always --match "v*" --abbrev=7)
+          SEMVER_TAG=$(awk -F'v|-g' '{print $2}' <<< $TAG)
+          echo "Current tag $TAG"
+          echo "Current semver tag $SEMVER_TAG"
+
+          echo ${{ steps.google_auth.outputs.access_token }} | helm registry login europe-west1-docker.pkg.dev --username oauth2accesstoken --password-stdin
+          helm package ./charts/mccp --version $SEMVER_TAG
+          helm push ./mccp-$SEMVER_TAG.tgz oci://europe-west1-docker.pkg.dev/weave-gitops-clusters/weave-gitops-enterprise/charts
 
   cluster-service:
     runs-on: ubuntu-latest
