Clusters across namespaces (#954)
* require specifying capi templates namespace

* add permission to list clusters across namespaces

* add cluster namespace to get cluster kube config api

* specify cluster namespace in template generation

* add namespace to cluster name

* use empty clusters namespace for aceptance test

* add namespace to cluster git path

* fix bootstrap path in tests

* Corrects cbcc path to include namespace

* Pass namespace through when deleting clusters

Co-authored-by: Simon Howe <footless@gmail.com>

--- a/test/utils/data/gitops-cluster-bootstrap-config.yaml
+++ b/test/utils/data/gitops-cluster-bootstrap-config.yaml
@@ -27,7 +27,7 @@ spec:
               "--hostname=$(GIT_PROVIDER_HOSTNAME)",
               "--owner=$(GITOPS_REPO_OWNER)",
               "--repository=$(GITOPS_REPO_NAME)",
-              "--path=./clusters/{{ .ObjectMeta.Name }}",
+              "--path=./clusters/{{ .ObjectMeta.Namespace }}/{{ .ObjectMeta.Name }}",
             ]
           envFrom:
             - secretRef:
