Disable the "Delivery" item in the navbar so we can release
- This is a hack. That we can remove post-release and in the future we
  should implement a better feature-flagging system

--- a/ui-cra/Makefile
+++ b/ui-cra/Makefile
@@ -4,7 +4,7 @@ node_modules: package.json yarn.lock
 	yarn config set network-timeout 300000 && yarn install --prod --frozen-lockfile
 
 build: node_modules $(shell find src -type f)
-	REACT_APP_VERSION="$(CALENDAR_VERSION) $(VERSION)" yarn build
+	REACT_APP_DISABLE_PROGRESSIVE_DELIVERY="true" REACT_APP_VERSION="$(CALENDAR_VERSION) $(VERSION)" yarn build
 
 core-lib:
 	rm -rf node_modules/@weaveworks/weave-gitops/
