--- a/charts/mccp/templates/clusters-service/clusters_service_secrets_rb.yaml
+++ b/charts/mccp/templates/clusters-service/clusters_service_secrets_rb.yaml
@@ -13,6 +13,7 @@ subjects:
       name: {{ include "mccp.serviceAccountName" . }}
       namespace: {{ .Release.Namespace | quote }}
 ---
+{{- if .Values.config.capi.clusters.namespace }}
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
@@ -26,6 +27,20 @@ subjects:
     - kind: ServiceAccount
       name: {{ include "mccp.serviceAccountName" . }}
       namespace: {{ .Release.Namespace | quote }}
+{{- else }}
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRoleBinding
+metadata:
+    name: clusters-service-secrets-role
+roleRef:
+    apiGroup: rbac.authorization.k8s.io
+    kind: ClusterRole
+    name: clusters-service-secrets-role
+subjects:
+    - kind: ServiceAccount
+      name: {{ include "mccp.serviceAccountName" . }}
+      namespace: {{ .Release.Namespace | quote }}
+{{- end }}
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
