Move REACT_APP_DISABLE_PROGRESSIVE_DELIVERY up to only run in ci
- to cause less disruption
- if it works okay we can move to release

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -24,6 +24,7 @@ env:
   NODE_MODULES_CACHE_NAME: cache-node-modules
   NODE_VERSION: "14"
   HELM_REPO: ${{ inputs.helmrepo }}
+  REACT_APP_DISABLE_PROGRESSIVE_DELIVERY: "true"
 
 jobs:
   helm-chart:
