--- a/ui-cra/package.json
+++ b/ui-cra/package.json
@@ -25,7 +25,6 @@
     "@types/react-router-dom": "^5.1.7",
     "@types/react-syntax-highlighter": "^13.5.2",
     "@types/styled-components": "^5.1.9",
-    "@weaveworks/progressive-delivery": "0.0.0-rc9",
     "@weaveworks/weave-gitops": "0.9.0",
     "classnames": "^2.3.1",
     "d3-scale": "4.0.0",
@@ -37,6 +36,7 @@
     "lodash": "^4.17.21",
     "moment": "2.25.3",
     "polished": "3.6.3",
+    "@weaveworks/progressive-delivery": "file:../../progressive-delivery/ui/lib/dist",
     "query-string": "^7.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
