Updated management cluster violaton test for multiple violation occurances
Add support for non-default namespace capd cluster creation
Added checks for cluster readiness after kubeconfig secret deletion
Add leaf cluster namespace support for acceptance tests
Add checks for annotations and labels for leaf clusters
Add support for non-default namespace capd cluster creation
Fix applications test ambiguous find element locator

--- a/test/utils/data/gitops-cluster.yaml
+++ b/test/utils/data/gitops-cluster.yaml
@@ -6,6 +6,12 @@ metadata:
   namespace: "{{.NameSpace}}"
   labels:
     weave.works/flux: "{{.Bootstrap}}"
+    weave.works/apps: "backup"
+  annotations:
+    metadata.weave.works/dashboard.grafana: https://grafana.com/
+    metadata.weave.works/dashboard.prometheus: https://prometheus.io/
+    metadata.weave.works/dashboard.javascript: "javascript:alert('hello there ' + window.localStorage.getItem('name'));"
+
 spec:
   secretRef:
     name: "{{.KubeconfigSecret}}"
