--- a/test/utils/data/calico-crs-configmap.yaml
+++ b/test/utils/data/calico-crs-configmap.yaml
@@ -2437,5 +2437,5 @@ data:
 kind: ConfigMap
 metadata:
   creationTimestamp: null
-  name: calico-crs-configmap
-  namespace: default
+  name: "{{.Name}}-calico-crs-configmap"
+  namespace: "{{.NameSpace}}"
