--- a/test/utils/data/calico-crs.yaml
+++ b/test/utils/data/calico-crs.yaml
@@ -1,13 +1,13 @@
 apiVersion: addons.cluster.x-k8s.io/v1alpha3
 kind: ClusterResourceSet
 metadata:
-  name: calico-crs
-  namespace: default
+  name: "{{.Name}}"
+  namespace: "{{.NameSpace}}"
 spec:
   clusterSelector:
     matchLabels:
       cni: calico
   resources:
   - kind: ConfigMap
-    name: calico-crs-configmap
+    name: "{{.Name}}-calico-crs-configmap"
 
