--- a/test/utils/data/gitops-cluster-bootstrap-config.yaml
+++ b/test/utils/data/gitops-cluster-bootstrap-config.yaml
@@ -1,12 +1,12 @@
 apiVersion: capi.weave.works/v1alpha1
 kind: ClusterBootstrapConfig
 metadata:
-  name: gitops
-  namespace: default
+  name: "{{NAME}}"
+  namespace: "{{NAMESPACE}}"
 spec:
   clusterSelector:
     matchLabels:
-      weave.works/flux: bootstrap
+      weave.works/flux: "{{BOOTSTRAP}}"
   jobTemplate:
     generateName: "run-gitops-{{ .ObjectMeta.Name }}"
     # requiredClusterReady: true
@@ -31,7 +31,7 @@ spec:
             ]
           envFrom:
             - secretRef:
-                name: my-pat
+                name: "{{PAT_SECRET}}"
           env:
             - name: KUBECONFIG
               value: "/etc/gitops/value"
