--- a/ui-cra/package.json
+++ b/ui-cra/package.json
@@ -101,5 +101,10 @@
     "http-proxy-middleware": "^2.0.0",
     "jest-styled-components": "^7.0.8",
     "prettier": "^2.3.0"
+  },
+  "jest": {
+    "transformIgnorePatterns": [
+      "node_modules/(?!coy)/"
+    ]
   }
 }
