added canary analysis metrics page

--- a/charts/mccp/templates/rbac/user_roles.yaml
+++ b/charts/mccp/templates/rbac/user_roles.yaml
@@ -85,7 +85,7 @@ metadata:
   name: gitops-canaries-reader
 rules:
   - apiGroups: ["flagger.app"]
-    resources: ["canaries"]
+    resources: ["canaries","metrictemplates"]
     verbs: ["get", "list"]
   - apiGroups: [""]
     resources: ["events"]
