--- a/.github/workflows/acceptance-test.yaml
+++ b/.github/workflows/acceptance-test.yaml
@@ -58,8 +58,8 @@ on:
         default: "/usr/local/bin/gitops"
         required: false
         type: string
-      artifacts-base-dir:
-        description: "Directory for test artifacts"
+      test-artifact-name:
+        description: "Test artifacts name"
         required: true
         type: string
       eks-leaf-kubeconfig:
@@ -82,7 +82,7 @@ on:
         required: true
       WGE_GIT_PROVIDER_PRIVATE_KEY:
         description: "Key for accessing git provider e.g. github or gitlab"
-        required: false
+        required: false      
       WGE_GITHUB_TOKEN:
         description: "Token for accessing GitHub"
         required: false
@@ -115,6 +115,9 @@ on:
         required: false
       WGE_GITLAB_CLIENT_SECRET:
         description: "Gitlab oauth pplication secret"
+        required: false
+      WGE_SLACK_BOT_TOKEN:
+        description: "Token for posting messages to slack"
         required: false
       GCP_PROJECT_ID:
         description: "Project id of the Google Cloud project"
@@ -156,7 +159,8 @@ env:
   MANAGEMENT_CLUSTER_KIND: ${{ inputs.management-cluster-kind }}
   CAPI_PROVIDER: ${{ inputs.capi_provider }}
   GITOPS_BIN_PATH: ${{ inputs.gitops-bin-path }}
-  ARTIFACTS_BASE_DIR: ${{ inputs.artifacts-base-dir }}
+  ARTIFACTS_BASE_DIR: "/tmp/acceptance-test-artifact"
+  TEST_ARTIFACT_NAME: ${{ inputs.test-artifact-name }}  
   EXP_CLUSTER_RESOURCE_SET: ${{ inputs.cluster_resource_set }}
   USE_GKE_GCLOUD_AUTH_PLUGIN: True
   SELENIUM_DEBUG: true
@@ -358,17 +362,13 @@ jobs:
             export GITLAB_HOSTNAME=${{ env.GIT_PROVIDER_HOSTNAME }}
           fi
 
-          # Set the ACCEPTANCE_TEST_ARTIFACT_NAME as environment variable for subsequent steps
-          ACCEPTANCE_TEST_ARTIFACT_NAME=$(basename ${{ env.ARTIFACTS_BASE_DIR }})-artifacts
-          echo "ACCEPTANCE_TEST_ARTIFACT_NAME=$ACCEPTANCE_TEST_ARTIFACT_NAME" >> $GITHUB_ENV
-
           cd test/acceptance/test/
-          go test ${{ inputs.label-filter }} -ginkgo.v -ginkgo.junit-report=${{ env.ARTIFACTS_BASE_DIR }}/acceptance-test-results.xml --timeout=99999s
+          go test ${{ inputs.label-filter }} -ginkgo.v -ginkgo.junit-report=${{ env.ARTIFACTS_BASE_DIR }}/${{ env.TEST_ARTIFACT_NAME }}.xml --timeout=99999s
       - name: Store test results
         if: ${{ always() }}
         uses: actions/upload-artifact@v2
         with:
-          name: ${{ env.ACCEPTANCE_TEST_ARTIFACT_NAME }}
+          name: ${{ env.TEST_ARTIFACT_NAME }}
           path: ${{ env.ARTIFACTS_BASE_DIR }}
           retention-days: 7
       - name: Reset management cluster
