--- a/charts/mccp/templates/rbac/user_roles.yaml
+++ b/charts/mccp/templates/rbac/user_roles.yaml
@@ -5,7 +5,7 @@ metadata:
   name: gitops-apps-reader
 rules:
   - apiGroups: [""]
-    resources: ["secrets", "pods" ]
+    resources: ["secrets", "pods", "services"]
     verbs: [ "get", "list" ]
   - apiGroups: ["apps"]
     resources: [ "deployments", "replicasets"]
@@ -21,6 +21,9 @@ rules:
     verbs: [ "get", "list", "patch" ]
   - apiGroups: [""]
     resources: ["events"]
+    verbs: ["get", "watch", "list"]
+  - apiGroups: ["autoscaling"]
+    resources: ["horizontalpodautoscalers"]
     verbs: ["get", "watch", "list"]
 ---
 apiVersion: rbac.authorization.k8s.io/v1
